# book_project

./: .gitattributes  .gitignore  .nojekyll  _quarto.yml  index.aux  index.lof  index.lot  index.toc  pyproject.toml  readme.md
assets/: _theory.qmd  candidate_support_chapter_references.bib  candidate_support_references.bib  deliberation-chapter-references.bib  neighborhood-chapter-references.bib  theory-chapter.bib
chapter_1/src/: manuscript.qmd
chapter_2/: pyproject.toml
chapter_2/assets/slides/: custom.scss
chapter_2/src/: .vdoc.py  appendix.qmd  appendix.rmarkdown  manuscript.qmd  roberts_empirical_chapter_1.qmd  slides.qmd
chapter_2/src/PY/: helper.py
chapter_2/src/R/: predicted_prob_bar.R
chapter_2/src/models/: model_fitting.R  study_1_fitting.R
chapter_2/src/slides/: .slides.qmd.icloud  color-book.qmd  index.qmd  simple.qmd  slides 2.qmd  slides.qmd
chapter_2/src/study_2/: 01_capd_text_scraping.py  02_capd_img_scraping.py  03_capd_downloading_images.py  04_color_detection.py  05_mit_election_lab_merge.py
chapter_3/assets/protocol/: dcr_cces_protocol.pages
chapter_3/src/: appendix.qmd  chapter_3.qmd
chapter_3/src/cleaning/: data-loading.R  study-1-cleaning.R  study-1-cleaning.py  study-2-cleaning.R  study-2-loading.R
chapter_3/src/models/: study-1-models.R
chapter_3/src/prr/: dcr_color_and_deliberation_prr.qmd
chapter_3/src/slides/: _publish.yml  slides.qmd
chapter_4/assets/irb/: 24-0158-consent.docx  24-0158-protocol.docx  color-and-neighborhood.docx  fa_review_form_2nov22.docx  roberts-consent.docx  (+5 more)
grants/ddirg/: readme.txt
(+180 files in other folders)
