[tool.poetry]
name = "book"
version = "0.1.0"
description = "Book project on colors as visual information in politics"
authors = ["DamonCharlesRoberts <damon.charles.roberts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
polars = "^0.18.3"
webdriver-manager = "^3.8.6"
pyarrow = "^12.0.1"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
opencv-python = "^4.7.0.72"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
